CREATE Conformance catalogue and /api/conformance routes
